# sina

./: CMakeLists.txt  LICENSE
doc/: design.md
misc/licenses/: voxsurf.txt
misc/mathematica/: geometry.nb  jijdj.nb  quadrature.nb
misc/stl/: cannon.stl  sphere.stl
src/: algebra.h  application.h  container.h  dof.h  helpers.h  node.h  process.h  properties.h  sina.h  strategy.h  utils.h
src/fem/: fem.h  geometry.h  quadrature.h  scm.h
src/io/: stl.h  voxelizer.h
src/misc/: base64.h
test/: test01.cpp  test02.cpp  test03.cpp  test04.cpp  test05.cpp  test06.cpp  test07.cpp  test08.cpp  test09.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test17.cpp  test18.cpp  test19.cpp  test20.cpp  test21.cpp  test22.cpp  test23.cpp
